# Reguard

./: .gitignore  CONTRIBUTING.md  IndependentMarkdownDemo.java  LICENSE  MarkdownEngineDemo.java  README.md  README_EN.md  TestComplex.java  TestEscapeSequence.java  TestLink.java  pom.xml  result.md  test-audio.txt  test.docx  test.md
.claude/: settings.local.json
markitdown-mcp/: README.md  pyproject.toml
markitdown-mcp/src/markitdown_mcp_advanced/: __main__.py  example.py
markitdown-mcp/src/markitdown_mcp_advanced/converters/: csv.py
markitdown-web/: readme.md
markitdown-web/backup_20251110_180955/: app.py  batch_status.json
markitdown-web/backup_20251110_180955/converters/: pdf_native_converter.py  word_converter.py
markitdown-web/backup_20251110_180955/downloads/: test_doc_f3de93e0.md  test_pptx_28e0150a.md
markitdown-web/backup_20251110_180955/templates/: index.html
markitdown-web/backup_20251111_173423/conveter/: app.py  config_manager.py  history.json  test_hot_reload.py
markitdown-web/backup_20251111_180647/conveter/: RTF_SETUP.md  app.py  batch_status.json  config.json  history.json  requirements.txt
markitdown-web/conveter/: HOT_DEPLOY_README.md  README.md  app.py  batch_status.json  config.json  file_migrator.py  history.json  requirements.txt
markitdown-web/conveter/.claude/: settings.local.json
markitdown-web/conveter/converters/: csv_converter.py  img_converter.py  pdf_converter.py  video_converter.py
markitdown-web/conveter/downloads/: f88f5573988f40b7a4ca26a72e69f828_template_2fd5710d.md
src/main/java/com/roy/jit/: Test.java
(+90 files in other folders)
