[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "markitdown_mcp_advanced"
version = "0.0.1"
authors = [
  { name="DuanYan007", email="duanyan2024@gmail.com" },
]
description = "duanyan007 test package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


[project.urls]
Homepage = "https://github.com/DuanYan007/markitdown"
Issues = "https://github.com/DuanYan007/markitdown/issues"

[project.scripts]
markitdown-mcp = "markitdown_mcp.__main__:main"

